internal/predicate/testdata/accept/04_role_check.lua
has_role(current_user, 'sla-admin')
