internal/predicate/testdata/reject/wrong_arg_type.lua
has_role(current_user, 42)
